[gd_scene load_steps=3 format=3 uid="uid://bvqtlc4601o2o"]

[ext_resource type="Script" path="res://Transfers.gd" id="1_grmnd"]
[ext_resource type="PackedScene" uid="uid://dpuqthqkaa5h8" path="res://navbar.tscn" id="2_lxpkc"]

[node name="Transfers" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grmnd")

[node name="Navbar" parent="." instance=ExtResource("2_lxpkc")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="GW" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -185.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Gameweek"
vertical_alignment = 1

[node name="Deadline" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 91.0
offset_right = -10.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Deadline:"
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 125.0
offset_right = -260.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Budget:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 130.0
offset_top = 125.0
offset_right = -130.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Free transfers:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 260.0
offset_top = 125.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cost:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Budget" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 156.0
offset_right = -260.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="FreeTransfers" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 130.0
offset_top = 156.0
offset_right = -130.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 260.0
offset_top = 156.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 189.0
offset_right = -10.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(370, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "My team:"

[node name="MakeTransfers" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -101.0
offset_right = -10.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Make transfers"

[node name="Error" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -131.0
offset_right = -10.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Loading" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 158.0
offset_top = 250.0
offset_right = 233.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Loading..."

[node name="AreYouSure" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AreYouSure"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.462745)

[node name="ColorRect2" type="ColorRect" parent="AreYouSure"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 295.0
offset_right = -15.0
offset_bottom = -369.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.666667, 0.666667, 0.666667, 1)

[node name="ColorRect3" type="ColorRect" parent="AreYouSure"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 300.0
offset_right = -20.0
offset_bottom = -374.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AreYouSure"]
offset_left = 30.0
offset_top = 310.0
offset_right = 360.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Are you sure?
Transfers cannot be undone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirm" type="Button" parent="AreYouSure"]
offset_left = 30.0
offset_top = 370.0
offset_right = 360.0
offset_bottom = 410.0
text = "Confirm"

[node name="Cancel" type="Button" parent="AreYouSure"]
offset_left = 30.0
offset_top = 420.0
offset_right = 360.0
offset_bottom = 460.0
text = "Cancel"

[connection signal="pressed" from="MakeTransfers" to="." method="_on_make_transfers_pressed"]
[connection signal="pressed" from="AreYouSure/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="AreYouSure/Cancel" to="." method="_on_cancel_pressed"]
